fix output type
